# advent-of-code

./: .gitignore  README.md
2022/Day-1/: Day-1.c  day_1  day_1.c
2022/Day-10/: Day-10.hs
2022/Day-11/: day_11.py
2022/Day-12/: a_star.py  day_12.py
2022/Day-13/: Day13.hs
2022/Day-14/: day_14.py
2022/Day-15/: day_15.py
2022/Day-16/: day_16.py
2022/Day-2/src/: Day2.java
2022/Day-3/: day_3.py
2022/Day-6/: day_6.py
2022/Day-7/: day_7.py
2022/Day-8/: day_8.py
2022/day01/C/: day_1.c  main
2022/day01/haskell/: Main  Main.hs
2022/day01/rust/: .Cargo.toml.un~
2022/day02/: Day2.java
2022/day03/haskell/: main.hs
2022/day04/: day_4.py
2022/day06/: day_6.py
2022/day11/: day_11.py
2022/day13/: day_13.cabal  hie.yaml
2022/day13/app/: Main.hs
2022/day14/: day_14.py
2022/day16/: day_16.py  day_16_new.py
2022/day17/: day_17.py
2022/day_01/: Day-1
2022/day_05/: day_5.py
2022/day_06/: day_6.py
2022/day_09/: day_9.py
2022/day_12/: day_12.py
2022/day_13/: Day13.hs
2022/day_16/: day_16.py
2022/day_17/: day_17.py
2023/day01/: day01.hs
2023/day11/haskell/: haskell.cabal
2023/day11/haskell/app/: Main.hs
2023/day12/: main.cpp
2024/: .gitignore  compile_commands.json  run.sh  utils.cpp
2024/day01/: main.cpp
2024/day02/: main.cpp  main.hs
2024/day03/: main.cpp
2024/day04/: main.cpp
2024/day05/: main.cpp
2024/day06/: main.cpp
2024/day07/: main.cpp
2024/day08/: main.cpp
2024/day09/: main.cpp
2024/day10/: main.cpp
2024/day11/: main.cpp
2024/template/: main.cpp
Day-1/: a.out  day_1  day_1.c
(+29 files in other folders)
